# CppCLI

./: .gitattributes  .gitignore  CLI.cpp  CLI.hpp  CMakeLists.txt  CliArg.hpp  CliError.cpp  CliError.hpp  ColorCode.cpp  ColorCode.hpp  EnumFlags.hpp  ThreadPool.cpp  ThreadPool.hpp  main.cpp  rose
